--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@netlify/functions": "^3.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.4.1",
     "@types/k6": "^0.54.2",
@@ -74,6 +75,7 @@
     "express-prom-bundle": "^8.0.0",
     "express-rate-limit": "^7.5.0",
     "figlet": "^1.8.0",
+    "firebase-admin": "^13.2.0",
     "helmet": "^8.0.0",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -88,6 +90,7 @@
     "prisma": "^6.4.1",
     "prom-client": "^15.1.3",
     "response-time": "^2.3.3",
+    "serverless-http": "^3.2.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
