--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --reset --config nodemon.json",
-    "dev:debug": "nodemon --inspect=0.0.0.0:9229 --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "prisma generate && webpack --config webpack.config.js",
-    "start": "node dist/bundle.js",
-    "build:test": "npm ci && npm run build && npm start",
+    "build": "prisma generate && swc src --out-dir dist && tsc-alias",
+    "start": "node dist/src/index.js",
+    "dev:debug": "nodemon --inspect=0.0.0.0:9229 -r @swc-node/register src/index.ts",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
@@ -24,8 +23,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc-node/register": "^1.10.9",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.16",
+    "@swc/core": "^1.11.8",
+    "@swc/helpers": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
@@ -33,6 +34,7 @@
     "@types/express": "^5.0.0",
     "@types/figlet": "^1.7.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
@@ -41,13 +43,15 @@
     "@types/swagger-ui-express": "^4.1.7",
     "globals": "^15.14.0",
     "ignore-loader": "^0.1.2",
+    "module-alias": "^2.2.3",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "swc-loader": "^0.2.6",
     "swc-node": "^1.0.0",
     "terser-webpack-plugin": "^5.3.11",
-    "tsc-alias": "^1.8.10",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript-transform-paths": "^3.5.3"
@@ -61,7 +65,6 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
-    "clean-webpack-plugin": "^4.0.0",
     "cloudinary": "^2.5.1",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
@@ -91,11 +94,7 @@
     "prom-client": "^15.1.3",
     "response-time": "^2.3.3",
     "serverless-http": "^3.2.0",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xendit-node": "^6.1.0",
